# src/app/api/models/airport-and-city-request.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface AirportAndCityRequest {
+  include?: Array<string>;
+  keyword?: string;
+}
