# src/app/api/models/airport-and-city-response.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+import { AirportData } from '../models/airport-data';
+import { Included } from '../models/included';
+export interface AirportAndCityResponse {
+  data?: Array<AirportData>;
+  included?: Included;
+}
