# src/app/api/models/airport.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Airport {
+  iataCode?: string;
+  name?: string;
+  subType?: string;
+}
