# src/app/api/models/amadeus-address.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface AmadeusAddress {
+  countryCode?: string;
+}
