# src/app/api/models/hotel-request.ts
@@ -1,0 +1,11 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface HotelRequest {
+  amenities?: Array<string>;
+  cityCode?: string;
+  latitude?: number;
+  longitude?: number;
+  radius?: number;
+  radiusUnit?: string;
+  ratings?: Array<string>;
+}
