# src/app/api/models/included.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+import { Airport } from '../models/airport';
+export interface Included {
+  airports?: {
+[key: string]: Airport;
+};
+}
