# src/app/api/models/journey-dto.ts
@@ -1,10 +1,12 @@
 /* tslint:disable */
 /* eslint-disable */
 import { AddressDto } from '../models/address-dto';
+import { FlightData } from '../models/flight-data';
 import { PlaceDto } from '../models/place-dto';
 export interface JourneyDto {
   destination?: Array<AddressDto>;
   endDate?: string;
+  flights?: Array<FlightData>;
   id?: string;
   placesToVisit?: Array<PlaceDto>;
   startDate?: string;
