# src/app/api/models/relationship.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Relationship {
+  href?: string;
+  id?: string;
+  type?: string;
+}
