# src/assets/openapi.yaml
@@ -227,6 +227,44 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/FlightOfferResponse'
+  /v1/amadeus/airports:
+    post:
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AirportAndCityRequest'
+      operationId: getAirports
+      summary: get airports
+      security:
+        - bearerAuth: [ ]
+      responses:
+        '200':
+          description: get airports
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AirportAndCityResponse'
+  /v1/amadeus/hotels:
+    post:
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/HotelRequest'
+      operationId: getHotels
+      summary: get hotels
+      security:
+        - bearerAuth: [ ]
+      responses:
+        '200':
+          description: get hotels
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/HotelResponse'
 
 components:
   schemas:
@@ -268,6 +306,10 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/PlaceDTO'
+        flights:
+          type: array
+          items:
+            $ref: '#/components/schemas/FlightData'
     PlaceDTO:
       type: object
       properties:
@@ -331,16 +373,92 @@ components:
           type: string
         tokenType:
           type: string
+    AirportAndCityRequest:
+      type: object
+      properties:
+        include:
+          type: array
+          items:
+            type: string
+        keyword:
+          type: string
+    AirportAndCityResponse:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/AirportData'
+        included:
+          $ref: '#/components/schemas/Included'
+    AirportData:
+      type: object
+      properties:
+        type:
+          type: string
+        subType:
+          type: string
+        name:
+          type: string
+        timeZoneOffset:
+          type: string
+        iataCode:
+          type: string
+        geoCode:
+          $ref: '#/components/schemas/AmadeusGeoCode'
+        address:
+          $ref: '#/components/schemas/AmadeusAddress'
+        relationships:
+          type: array
+          items:
+            $ref: '#/components/schemas/Relationship'
+    AmadeusGeoCode:
+      type: object
+      properties:
+        latitude:
+          type: number
+        longitude:
+          type: number
+    AmadeusAddress:
+      type: object
+      properties:
+        countryCode:
+          type: string
+    Relationship:
+      type: object
+      properties:
+        id:
+          type: string
+        type:
+          type: string
+        href:
+          type: string
+    Included:
+      type: object
+      properties:
+        airports:
+          type: object
+          additionalProperties:
+            $ref: '#/components/schemas/Airport'
+    Airport:
+      type: object
+      properties:
+        name:
+          type: string
+        iataCode:
+          type: string
+        subType:
+          type: string
     FlightOfferResponse:
       type: object
       properties:
         data:
           type: array
           items:
-            $ref: '#/components/schemas/Data'
+            $ref: '#/components/schemas/FlightData'
         dictionaries:
           $ref: '#/components/schemas/Dictionary'
-    Data:
+    FlightData:
       type: object
       properties:
         type:
@@ -420,6 +538,44 @@ components:
         carriers:
           type: object
           additionalProperties:
+            type: string
+    HotelResponse:
+      type: object
+      properties:
+        chainCode:
+          type: string
+        iataCode:
+          type: string
+        dupeId:
+          type: number
+        name:
+          type: string
+        hotelId:
+          type: string
+        geoCode:
+          $ref: '#/components/schemas/AmadeusGeoCode'
+        address:
+          $ref: '#/components/schemas/AmadeusAddress'
+    HotelRequest:
+      type: object
+      properties:
+        cityCode:
+          type: string
+        latitude:
+          type: number
+        longitude:
+          type: number
+        radius:
+          type: number
+        radiusUnit:
+          type: string
+        amenities:
+          type: array
+          items:
+            type: string
+        ratings:
+          type: array
+          items:
             type: string
 
   securitySchemes:
